# data-engineering-prototyping

./: Makefile  README.md  docker-compose.yml  pyproject.toml
kafka_consumer/: dockerfile  kafka_consumer.py
kafka_producer/: dockerfile  kafka_producer.py
kafka_spark/: dockerfile  entrypoint.sh
kafka_spark/code/: kafka_spark_aggregation.py  kafka_spark_consumer.py  spark_job.py
kafka_spark_consumer/: dockerfile  kafka_consumer.py  kafka_spark_consumer.py
kubernetes/: ingress.yaml  kafka-broker.yaml  kafka-consumer.yaml  kafka-producer.yaml  kafka-ui.yaml  kafka-zookeeper.yaml  namespaces.yaml  python-jobs.yaml  spark-ingress.yaml  spark-master.yaml  spark-worker.yaml
kubernetes/kafka/: kafka-broker.yaml  kafka-ui.yaml
kubernetes/spark/: spark-datastore.yaml  spark-master.yaml  spark-worker.yaml
kubernetes/test/: kafka-consumer.yaml  kafka-producer.yaml  test-spark-job.yaml
spark/: dockerfile  entrypoint.sh
spark_datastore/: dockerfile
spark_job/: dockerfile  kafka_consumer.py
