[tool.poetry]
name = "dev-testing"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dev_testing"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
